# solana-name-registry

./: .gitignore  Anchor.toml  Cargo.toml  LICENSE  README.md  package.json
programs/name-registry/: Cargo.toml
programs/name-registry/src/: constants.rs  errors.rs  lib.rs  state.rs
programs/name-registry/src/instructions/: initialize.rs  mod.rs  register_name.rs  reserve_name.rs  set_metadata.rs  transfer_name.rs  update_metadata.rs
tests/: name-registry.ts
