[package]
name = "name-registry"
version = "0.1.0"
description = "Solana dApp for username registration, metadata, and ownership transfer"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "name_registry"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = "0.31.1"

